[project]
name = "common_code"
version = "1.0.3"
description = "Common code used by the Swiss AI Center services"
requires-python = ">=3.10"
license = { text = "AGPL-3.0" }
authors = [
  { name = "Andrea Petrucci", email = "andrea.petrucci@hefr.ch" },
  { name = "Ludovic Delafontaine", email = "ludovic.delafontaine@heig-vd.ch" },
]
maintainers = [
  { name = "Andrea Petrucci", email = "andrea.petrucci@hefr.ch" },
  { name = "Ludovic Delafontaine", email = "ludovic.delafontaine@heig-vd.ch" },
]

# https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = [
  "aiobotocore==2.12.1",
  "aiofiles==23.2.1",
  "email-validator==2.1.1",
  "fastapi==0.110.0",
  "flake8==7.0.0",
  "httpx==0.27.0",
  "pydantic_settings==2.2.1",
  "python-dotenv==1.0.1",
  "PyYAML==6.0.1",
  "uvicorn==0.28.0",
]

# List additional groups of dependencies here (e.g. development
# dependencies). Users will be able to install these using the "extras"
# syntax, for example:
#
#   $ pip install common-code[test]
#
# Similar to `dependencies` above, these must be valid existing
# projects.
[project.optional-dependencies]
test = [
  "pytest==8.1.1",
  "pytest-asyncio==0.23.5.post1",
  "pytest-cov==4.1.0",
  "pytest-httpserver==1.0.10",
]

[project.urls]
"Homepage" = "https://swiss-ai-center.github.io/core-engine/"
"Bug Reports" = "https://github.com/swiss-ai-center/core-engine/issues"
"Demo" = "https://webapp-swiss-ai-center.kube.isc.heia-fr.ch"
"Source" = "https://github.com/swiss-ai-center/core-engine"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
