[project]
name = "common_code"
version = "1.2.0"
description = "Common code used by the Swiss AI Center services"
requires-python = ">=3.10"
license = { text = "AGPL-3.0" }
authors = [
  { name = "Andrea Petrucci", email = "andrea.petrucci@hefr.ch" },
  { name = "Ludovic Delafontaine", email = "ludovic.delafontaine@heig-vd.ch" },
]
maintainers = [
  { name = "Rémy Marquis", email = "remy.marquis@heig-vd.ch" },
]

# https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = [
  "aiobotocore>=2.26.0,<3.0.0",
  "aiofiles>=23.2.1,<24.0.0",
  "email-validator>=2.3.0,<3.0.0",
  "fastapi~=0.135.1",
  "flake8>=7.0.0,<8.0.0",
  "httpx~=0.28.1",
  "pydantic_settings>=2.13.1,<3.0.0",
  "python-dotenv>=1.2.2,<2.0.0",
  "PyYAML>=6.0.3,<7.0.0",
  "uvicorn~=0.41.0",
]

# List additional groups of dependencies here (e.g. development
# dependencies). Users will be able to install these using the "extras"
# syntax, for example:
#
#   $ pip install common-code[test]
#
# Similar to `dependencies` above, these must be valid existing
# projects.
[project.optional-dependencies]
test = [
  "pytest==8.1.1",
  "pytest-asyncio==0.23.5.post1",
  "pytest-cov==4.1.0",
  "pytest-httpserver==1.0.10",
]

[project.urls]
"Homepage" = "https://hes-so.ch/swiss-ai-center/"
"Bug Reports" = "https://github.com/swiss-ai-center/common-code/issues"
"Demo" = "https://app.swiss-ai-center.ch"
"Source" = "https://github.com/swiss-ai-center/common-code/"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
